[tool.poetry]
name = "lablib"
version = "0.1.0-dev.1"
description = ""
authors = [
    "maxpareschi <max.pareschi@22dogstudio.com>",
    "jakubjezek001 <jakubjezek001@gmail.com>",
    "doerp <me@doerp.cool>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.1,<3.10"
opentimelineio = "^0.16.0"
pytest = "^6.2.4"
opencolorio = "^2.3.2"
selenium = "^4.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
