[tool.poetry]
name = "lablib"
version = "0.1.1-dev.1"
description = ""
authors = [
    "maxpareschi <max.pareschi@22dogstudio.com>",
    "jakubjezek001 <jakubjezek001@gmail.com>",
    "doerp <me@doerp.cool>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.1,<3.10"
opentimelineio = "^0.16.0"
pytest = "^6.2.0"
opencolorio = "^2.3.2"
selenium = "^4.20.0"
sphinx = "^7.3.7"
sphinx-autoapi = "^2.0.1"
sphinxcontrib-napoleon = "^0.7"
revitron-sphinx-theme = { git = "https://github.com/revitron/revitron-sphinx-theme.git", branch = "master" }
furo = "^2024.5.6"
sphinx-copybutton = "^0.5.2"

[tool.poetry.extras]
docs = ["Sphinx", "sphinxcontrib-napoleon"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
